--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "~1.2.0",
     "cookie-parser": "~1.1.0",
     "method-override": "~1.0.2",
-    "express-session": "~1.2.1"
+    "express-session": "~1.2.1",
+    "request": "~2.49.0"
   }
 }
