--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,8 @@ indent_size = 4
 [package.json]
 indent_style = space
 indent_size = 2
+
+[Makefile]
+indent_style = tab
+indent_size = 8
+insert_final_newline = false
