--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "~1.1.0",
     "method-override": "~1.0.2",
     "express-session": "~1.2.1",
-    "request": "~2.49.0"
+    "request": "~2.49.0",
+    "multer": "~0.1.6"
   }
 }
